re PR bootstrap/40347 (i386-darwin ICEs while building libgcc during stage2)

PR bootstrap/40347
	* function.c (reposition_prologue_and_epilogue_notes): If epilogue
	contained no insns, reposition note before last insn.

From-SVN: r149158